# edu-helpai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-cd-pipeline.yaml
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.mlflow  Dockerfile.ollama
k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  mlflow-deployment.yaml  namespace.yaml  nvidia-device-plugin.yaml  ollama-deployment.yaml  ollama-gpu-deployment.yaml  pvc.yaml
k8s/scripts/linux/: minikube-connect.sh  minikube-start.sh
k8s/scripts/windows/: Connect-Minikube.ps1  Start-Minikube.ps1  Stop-Minikube.ps1
scripts/linux/: app-start.sh
scripts/windows/: Show-Logs.ps1  Start-EduHelpAI.ps1  Stop-EduHelpAI.ps1
src/backend/: config.py  main.py
src/backend/api/routes/: chat.py  documents.py  health.py
src/backend/core/: database.py
src/backend/models/: document.py
src/backend/services/: document_processor.py  embedding.py  mlflow_tracker.py  rag_service.py
src/frontend/: app.py
tests/: conftest.py  test_api_documents.py  test_chat.py  test_database.py  test_document_processor.py  test_embedding_service.py  test_health.py  test_mlflow_tracker.py  test_rag_service.py
