[project]
name = "Edu-HelpAI"
version = "0.1.0"
requires-python = "==3.11.3"
dependencies = [
    # web libs,
    "fastapi==0.135.3",
    "uvicorn[standard]==0.43.0",
    "python-multipart==0.0.22",

    # Database
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "psycopg2-binary==2.9.11",
    "asyncpg",
    "aiosqlite",
    "sqlite-vec==0.1.9",

    # AI/ML
    "langchain==1.2.15",
    "langchain-community==0.4.1",
    "langchain-text-splitters==1.1.1",
    "sentence-transformers==5.3.0",
    "numpy==2.4.4",
    "pypdf==6.9.2",
    "unstructured==0.22.16",

    "mlflow==3.10.1",
    "chainlit==2.11.1",

    # utilities
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "httpx==0.28.1",
    "tenacity==9.1.4"
]

[project.optional-dependencies]
dev = [
    "black==26.3.1",
    "mypy==1.20.0",
    "flake8==7.3.0",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-asyncio==1.3.0",
    "factory-boy==3.3.3",
    "testcontainers"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_any_generics = false
warn_return_any = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["src.frontend.*"]
disallow_untyped_calls = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode="strict"
addopts = "--cov=src/backend --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/migrations/*"]